iOS: refine OpenSSH path and prompt handling

--- a/etc/skel/.exshrc
+++ b/etc/skel/.exshrc
@@ -205,4 +205,4 @@ if [ -r "$HOME/.exshrc.local" ]; then
     . "$HOME/.exshrc.local"
 fi
 
-alias ssh='ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
+# alias ssh='ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
