--- a/ios/PSCAL.xcodeproj/xcshareddata/xcschemes/PscalApp.xcscheme
+++ b/ios/PSCAL.xcodeproj/xcshareddata/xcschemes/PscalApp.xcscheme
@@ -59,6 +59,11 @@
             value = ""
             isEnabled = "YES">
          </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "PSCALI_PTY_TRACE"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
       </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
