--- a/ios/PSCAL.xcodeproj/xcshareddata/xcschemes/PscalApp.xcscheme
+++ b/ios/PSCAL.xcodeproj/xcshareddata/xcschemes/PscalApp.xcscheme
@@ -57,12 +57,37 @@
          <EnvironmentVariable
             key = ""
             value = ""
-            isEnabled = "YES">
+            isEnabled = "NO">
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "PSCALI_PTY_TRACE"
             value = "1"
-            isEnabled = "YES">
+            isEnabled = "NO">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "PSCALI_PTY_OUTPUT_LOG"
+            value = "1"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "PSCALI_HERM_DEBUG"
+            value = "1"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "PSCALI_IO_DEBUG"
+            value = "1"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "PSCALI_RUNTIME_STDERR"
+            value = "1"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "PSCALI_TAB_INIT_DEBUG"
+            value = "1"
+            isEnabled = "NO">
          </EnvironmentVariable>
       </EnvironmentVariables>
    </LaunchAction>
