Improve iOS pty/ssh and editor integration

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ ios/PSCAL.xcodeproj/project.xcworkspace/xcuserdata/
 ios/PSCAL.xcodeproj/xcuserdata/mke.xcuserdatad/
 ios/DerivedData/
 tmp/
+.xcode-deriv/
