--- a/ios/Sources/App/Info.plist
+++ b/ios/Sources/App/Info.plist
@@ -20,6 +20,10 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIFileSharingEnabled</key>
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>Bluetooth is used for optional external keyboard and accessory connectivity.</string>
 	<key>NSBonjourServices</key>
