Update runtime shortcuts and iOS build fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -398,21 +398,51 @@ endif()
 set(PSCAL_SQLITE_LIBS "")
 set(PSCAL_SQLITE_INCLUDE_DIRS "")
 if(ENABLE_EXT_BUILTIN_SQLITE)
-    find_package(SQLite3 QUIET)
-    if(SQLite3_FOUND)
+    if(DEFINED SQLite3_INCLUDE_DIR AND NOT EXISTS "${SQLite3_INCLUDE_DIR}/sqlite3.h")
+        unset(SQLite3_INCLUDE_DIR CACHE)
+    endif()
+    if(DEFINED SQLite3_LIBRARY AND NOT EXISTS "${SQLite3_LIBRARY}")
+        unset(SQLite3_LIBRARY CACHE)
+    endif()
+
+    if(CMAKE_SYSTEM_NAME STREQUAL "iOS")
+        set(_PSCAL_SQLITE_SYSROOT "${CMAKE_OSX_SYSROOT}")
+        if(_PSCAL_SQLITE_SYSROOT STREQUAL "iphoneos" OR _PSCAL_SQLITE_SYSROOT STREQUAL "iphonesimulator")
+            execute_process(
+                COMMAND xcrun --sdk ${_PSCAL_SQLITE_SYSROOT} --show-sdk-path
+                OUTPUT_VARIABLE _PSCAL_SQLITE_SYSROOT
+                OUTPUT_STRIP_TRAILING_WHITESPACE
+                ERROR_QUIET
+            )
+        endif()
+        if(_PSCAL_SQLITE_SYSROOT AND EXISTS "${_PSCAL_SQLITE_SYSROOT}/usr/include/sqlite3.h")
+            set(PSCAL_SQLITE_INCLUDE_DIRS "${_PSCAL_SQLITE_SYSROOT}/usr/include")
+        endif()
+        if(_PSCAL_SQLITE_SYSROOT AND EXISTS "${_PSCAL_SQLITE_SYSROOT}/usr/lib/libsqlite3.tbd")
+            set(PSCAL_SQLITE_LIBS "${_PSCAL_SQLITE_SYSROOT}/usr/lib/libsqlite3.tbd")
+        endif()
+        unset(_PSCAL_SQLITE_SYSROOT)
+    endif()
+
+    if(PSCAL_SQLITE_LIBS AND PSCAL_SQLITE_INCLUDE_DIRS)
         add_compile_definitions(ENABLE_EXT_BUILTIN_SQLITE)
-        if(SQLite3_LIBRARIES)
-            set(PSCAL_SQLITE_LIBS ${SQLite3_LIBRARIES})
-        endif()
-        if(SQLite3_INCLUDE_DIRS)
-            set(PSCAL_SQLITE_INCLUDE_DIRS ${SQLite3_INCLUDE_DIRS})
-        endif()
     else()
-        if(release)
-            message(FATAL_ERROR "-Drelease requires SQLite3 development files so extended sqlite builtins can be enabled.")
+        find_package(SQLite3 QUIET)
+        if(SQLite3_FOUND)
+            add_compile_definitions(ENABLE_EXT_BUILTIN_SQLITE)
+            if(SQLite3_LIBRARIES)
+                set(PSCAL_SQLITE_LIBS ${SQLite3_LIBRARIES})
+            endif()
+            if(SQLite3_INCLUDE_DIRS)
+                set(PSCAL_SQLITE_INCLUDE_DIRS ${SQLite3_INCLUDE_DIRS})
+            endif()
         else()
-            message(WARNING "SQLite3 development files not found; disabling sqlite extended builtins. Set -DENABLE_EXT_BUILTIN_SQLITE=OFF to silence this warning.")
-            set(ENABLE_EXT_BUILTIN_SQLITE OFF CACHE BOOL "Enable extended sqlite builtins" FORCE)
+            if(release)
+                message(FATAL_ERROR "-Drelease requires SQLite3 development files so extended sqlite builtins can be enabled.")
+            else()
+                message(WARNING "SQLite3 development files not found; disabling sqlite extended builtins. Set -DENABLE_EXT_BUILTIN_SQLITE=OFF to silence this warning.")
+                set(ENABLE_EXT_BUILTIN_SQLITE OFF CACHE BOOL "Enable extended sqlite builtins" FORCE)
+            endif()
         endif()
     endif()
 endif()
@@ -689,6 +719,49 @@ if(SDL)
 
         # Provide backward-compatible variable names used elsewhere in the build.
     endif()
+endif()
+
+# ---- iOS SDK cache cleanup (Zlib) ----
+if(PSCAL_REAL_IOS)
+    if(DEFINED ZLIB_INCLUDE_DIR AND NOT EXISTS "${ZLIB_INCLUDE_DIR}/zlib.h")
+        unset(ZLIB_INCLUDE_DIR CACHE)
+    endif()
+    if(DEFINED ZLIB_LIBRARY AND NOT EXISTS "${ZLIB_LIBRARY}")
+        unset(ZLIB_LIBRARY CACHE)
+    endif()
+    if(DEFINED ZLIB_LIBRARY_RELEASE AND NOT EXISTS "${ZLIB_LIBRARY_RELEASE}")
+        unset(ZLIB_LIBRARY_RELEASE CACHE)
+    endif()
+    if(DEFINED ZLIB_LIBRARY_DEBUG AND NOT EXISTS "${ZLIB_LIBRARY_DEBUG}")
+        unset(ZLIB_LIBRARY_DEBUG CACHE)
+    endif()
+
+    set(_PSCAL_ZLIB_SYSROOT "${CMAKE_OSX_SYSROOT}")
+    if(_PSCAL_ZLIB_SYSROOT STREQUAL "iphoneos" OR _PSCAL_ZLIB_SYSROOT STREQUAL "iphonesimulator")
+        execute_process(
+            COMMAND xcrun --sdk ${_PSCAL_ZLIB_SYSROOT} --show-sdk-path
+            OUTPUT_VARIABLE _PSCAL_ZLIB_SYSROOT
+            OUTPUT_STRIP_TRAILING_WHITESPACE
+            ERROR_QUIET
+        )
+    endif()
+    if(_PSCAL_ZLIB_SYSROOT AND EXISTS "${_PSCAL_ZLIB_SYSROOT}/usr/include/zlib.h")
+        if(NOT ZLIB_INCLUDE_DIR)
+            set(ZLIB_INCLUDE_DIR "${_PSCAL_ZLIB_SYSROOT}/usr/include" CACHE PATH "Zlib include directory")
+        endif()
+    endif()
+    if(_PSCAL_ZLIB_SYSROOT AND EXISTS "${_PSCAL_ZLIB_SYSROOT}/usr/lib/libz.tbd")
+        if(NOT ZLIB_LIBRARY_RELEASE)
+            set(ZLIB_LIBRARY_RELEASE "${_PSCAL_ZLIB_SYSROOT}/usr/lib/libz.tbd" CACHE FILEPATH "Zlib release library")
+        endif()
+        if(NOT ZLIB_LIBRARY_DEBUG)
+            set(ZLIB_LIBRARY_DEBUG "${_PSCAL_ZLIB_SYSROOT}/usr/lib/libz.tbd" CACHE FILEPATH "Zlib debug library")
+        endif()
+        if(NOT ZLIB_LIBRARY)
+            set(ZLIB_LIBRARY "${_PSCAL_ZLIB_SYSROOT}/usr/lib/libz.tbd" CACHE FILEPATH "Zlib library")
+        endif()
+    endif()
+    unset(_PSCAL_ZLIB_SYSROOT)
 endif()
 
 # --- CURL (system vs bundled) ---
