--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,5 @@ ios/PSCAL.xcodeproj/xcuserdata/mke.xcuserdatad/
 ios/DerivedData/
 tmp/
 .xcode-deriv/
-
 .swp
+ios/PSCAL.xcodeproj/xcshareddata/xcdebugger/*
